# atop-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
atop_web/: __init__.py  main.py
atop_web/api/: briefings.py  cache.py  jobs.py  parsing.py  sessions.py  timerange.py
atop_web/api/routes/: __init__.py  dashboard.py  files.py  jobs.py  llm.py  processes.py  (+3 more)
atop_web/llm/: __init__.py  briefing.py  chat.py  context.py  prompts.py  provider.py  schema.py  tools.py
atop_web/parser/: __init__.py  aggregate.py  decompress.py  index.py  lazy.py  reader.py
atop_web/static/: app.js  index.html  style.css
docs/: COMPATIBILITY.md
scripts/: inspect_offsets.py
tests/: conftest.py  test_aggregate_cache.py  test_all_range_downsample.py  test_api.py  test_briefing_trigger.py  test_chart_uses_aggregate.py  test_chat_tool_loop.py  test_chat_ui_assets.py  test_dashboard_endpoint.py  test_frontend_single_fetch.py  test_index_builder.py  test_jobs.py  test_layout_breakpoints.py  test_lazy_decode.py  test_lazy_default.py  test_llm_api.py  test_llm_briefing.py  test_llm_chat.py  test_llm_context.py  test_llm_prompts.py  test_llm_provider.py  test_llm_range_validation.py  test_memory_budget.py  test_offset_scanner.py  test_offset_scanner_large.py  test_parser.py  test_processes_lazy.py  test_provider_bedrock_tools.py  test_response_cache.py  test_samples_lazy.py  test_session_store_lazy.py  test_static_assets.py  test_summary_lazy.py  test_tools.py  test_tools_lazy.py  test_upload_spooled.py
tests/_helpers/: eager_decode.py
(+3 files in other folders)
